--- a/addons/website_sale_loyalty/wizard/loyalty_generate_wizard_views.xml
+++ b/addons/website_sale_loyalty/wizard/loyalty_generate_wizard_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="loyalty.loyalty_generate_wizard_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='valid_until']" position="after">
-                <field name="website_id" groups="website.group_multi_website" invisible="1"/>
+                <field name="website_id" groups="website.group_multi_website"/>
             </xpath>
         </field>
     </record>
