--- a/addons/loyalty_delivery/views/loyalty_reward_views.xml
+++ b/addons/loyalty_delivery/views/loyalty_reward_views.xml
@@ -6,9 +6,31 @@
         <field name="inherit_id" ref="loyalty.loyalty_reward_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//group[@id='reward_type_group']" position="after">
-                <group id="shipping" attrs="{'invisible': [('reward_type', '!=', 'shipping')]}">
+                <group id="shipping" string="Discount applied to" attrs="{'invisible': [('reward_type', '!=', 'shipping')]}">
                     <field name="discount_max_amount"/>
                 </group>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="loyalty_reward_view_kanban_inherit_loyalty_delivery" model="ir.ui.view">
+        <field name="name">loyalty.reward.view.kanban.inherit.loyalty.delivery</field>
+        <field name="model">loyalty.reward</field>
+        <field name="inherit_id" ref="loyalty.loyalty_reward_view_kanban"/>
+        <field name="arch" type="xml">
+            <xpath expr="//div[@class='o_loyalty_kanban_card_left']" position="after">
+                <t t-if="record.reward_type.raw_value === 'shipping'" t-attf-style="display: -webkit-box; -webkit-box-pack: center; -webkit-box-orient: vertical;">
+                    
+                    <a>Free shipping <t t-if="record.discount_max_amount.raw_value > 0">( Max <field name="discount_max_amount"/> )</t></a>
+                    <br/>
+                    <br/>
+
+                    <div class="o_kanban_record_title">
+                        <a>Applied to:</a>
+                        <br/>
+                    </div>
+                    <a>Order</a>    
+                </t>                    
             </xpath>
         </field>
     </record>
