--- a/addons/web/static/src/core/commands/command_palette.scss
+++ b/addons/web/static/src/core/commands/command_palette.scss
@@ -16,9 +16,6 @@
             &_hotkey {
                 align-items: center;
                 justify-content: space-between;
-            }
-
-            &_hotkey, &_left {
                 background-color: inherit;
                 padding: 0.5rem 1.3em;
                 display: flex;
@@ -41,7 +38,7 @@
     }
     .o_command{
         cursor: pointer;
-        .test-ellipsis {
+        .text-ellipsis {
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
