[IMP] web: allow commands to be middle-clickable
Purpose
=======
Allow commands in the command palette to be opened in a new tab by
either CTRL+clicking on the command, CTRL+ENTER or right clicking and
copying the link/opening in new tab.

Specifications
=============
Add new slot `focusMessage` that displays the message (if device is not
a mobile device). The `href` value has then to be defined in the
registry.

Task-2710445

Part-of: odoo/odoo#94241

--- a/addons/web/static/src/core/commands/command_palette.scss
+++ b/addons/web/static/src/core/commands/command_palette.scss
@@ -24,6 +24,10 @@
                     top: 0.4em;
                 }
             }
+            a {
+                text-decoration: none;
+                color: inherit;
+            }
         }
 
     }
@@ -42,6 +46,10 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             overflow: hidden;
+        }
+        .o_command_focus {
+            white-space: nowrap;
+            opacity: 0.9;
         }
     }
 }
