[IMP] mail: Emoji border need to be softly
From 15.0, Odoo adding new feature - allow user having reaction on
message, it's great thing.
But the border of this emoji's group looks a bit rough, even though it
has the `rounded rectangle' style.

This PR make border of this group feel sotfly and more friendly with
user.

--- a/addons/mail/static/src/components/message_reaction_group/message_reaction_group.scss
+++ b/addons/mail/static/src/components/message_reaction_group/message_reaction_group.scss
@@ -3,8 +3,8 @@
 // ------------------------------------------------------------------
 
 .o_MessageReactionGroup {
-    border-radius: $o-mail-rounded-rectangle-border-radius-sm;
     cursor: pointer;
+    border-radius: 1rem;
 }
 
 // ------------------------------------------------------------------
@@ -19,7 +19,7 @@
 
     &.o-hasUserReacted, &.o-hasUserReacted:hover {
         border-color: $o-brand-primary;
-        background-color: rgba($o-brand-primary, .1);
+        background-color: $white;
     }
 
     &:hover {
