--- a/addons/mrp/wizard/mrp_production_split.xml
+++ b/addons/mrp/wizard/mrp_production_split.xml
@@ -36,6 +36,9 @@
                         </group>
                         <group>
                             <field name="product_id"/>
+                            <field name="product_tracking" invisible="1"/>
+                            <field name="company_id" invisible="1"/>
+                            <field name="state" invisible="1"/>
                             <label for="product_qty"/>
                             <div class="o_row">
                                 <span><field name="product_qty"/></span>
@@ -58,6 +61,8 @@
                             <field name="quantity"/>
                             <field name="user_id"/>
                             <field name="date"/>
+                            <field name="lot_producing_id" context="{'default_product_id': parent.product_id, 'default_company_id': parent.company_id}"
+                            domain="[('company_id','=',parent.company_id),('product_id','=',parent.product_id)]" attrs="{'column_invisible': ['|',('parent.state','=','draft'),('parent.product_tracking', 'in', ('none', False))]}"/>
                         </tree>
                     </field>
                     <field name="production_split_multi_id" invisible="1"/>
