[IMP] point_of_sale: download/print saleDetailsReport from closePosPopup
In this commit we make it possible for a user to
download/print the Sales Report of the current
session by clicking at the "download"/"printer"
icon at the lower right corner of the closing pos
popup. This is a commonly used feature. Thus, we
make the UI more usable.

In general, the sales report can be generated by two
different ways:

- either by providing a start and end time (products
within that time span will be included).

- or by providing a session_id (products that are sold
during this specific pos_session will be included) which
is used in some localisation modules (e.g. pos_l10n_se).

To achieve this, we generalized the `_get_report_values`
function to consider both possibilities. As a result,
the inherited version of the function at the
pos_l10n_se module was made reduntant, so we deleted
it.

NOTE: the "Printer" button will be displayed only when
a printer is connected to the IoT box.

task-2755384

--- a/addons/point_of_sale/static/src/css/popups/closing_pos_popup.css
+++ b/addons/point_of_sale/static/src/css/popups/closing_pos_popup.css
@@ -138,6 +138,7 @@
         display: flex;
         flex-direction: column;
         height: unset;
+        padding-left: 0;
     }
 
     .pos .close-pos-popup .footer .button {
