[FIX] web_editor: ensure the Powerbox displays above a modal
The upgrade from Bootstrap 4 to 5 broke the display of the Powerbox when
the editor is in a modal. This adapts the Powerbox's z-index to make
sure it always displays above a modal.

task-2901697

--- a/addons/web_editor/static/src/js/editor/odoo-editor/src/style.scss
+++ b/addons/web_editor/static/src/js/editor/odoo-editor/src/style.scss
@@ -191,7 +191,7 @@
 
 .oe-powerbox-wrapper {
     position: absolute;
-    z-index: 1051;
+    z-index: $zindex-modal;
     border: black;
     background-color: white;
     max-height: 40vh;
