[IMP] web: allow form view to customize actionmenu types

--- a/addons/web/static/src/views/form/form_controller.xml
+++ b/addons/web/static/src/views/form/form_controller.xml
@@ -22,6 +22,7 @@
                             isDomainSelected="model.root.isDomainSelected"
                             resModel="model.root.resModel"
                             domain="props.domain"
+                            actionMenuTypes="props.actionMenuTypes"
                         />
                     </t>
                 </t>
