[FIX] web: correctly add o_xxl_formview class
With the conversion of views to the new webclient, the o_xxl_formview
class was no longer applied as expected, which broke the layout and the
width calculation in embedded list views (as the chatter would take up
more space than intended during the width computation). This commit
fixes that by adding the class when needed.

This commit also moves the css rules relative to that class which are
mainly used for the side-chatter, from enterprise to community, as the
side chatter has been made available in community as well.

enterprise: odoo/enterprise#29803

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -1010,6 +1010,31 @@ $o-form-label-margin-right: 0px;
         }
     }
 }
+
+.o_xxl_form_view {
+    flex-flow: row nowrap;
+    height: 100%;
+
+    .o_form_sheet_bg {
+        flex: 1 1 auto; // Side chatter is disabled if this has to shrink but this was added for safety
+        width: $o-form-sheet-min-width + 2 * $o-horizontal-padding;
+        // max-width: map-get($container-max-widths, xl) + 2 * $o-horizontal-padding; // would be logical but breaks no-chatter form views
+        padding: 0 $o-horizontal-padding;
+        overflow: auto;
+        border-bottom: none;
+
+        > .o_form_statusbar, > .alert {
+            margin-left: -$o-horizontal-padding;
+            margin-right: -$o-horizontal-padding;
+        }
+
+        > .o_form_sheet {
+            width: 100%;
+            max-width: map-get($container-max-widths, xl);
+        }
+    }
+}
+
 .o_form_view.o_xxs_form_view {
     .oe_title {
         word-break: break-all;
