--- a/addons/note/static/src/scss/note.scss
+++ b/addons/note/static/src/scss/note.scss
@@ -3,7 +3,7 @@
     text-decoration: line-through;
 }
 
-.o_note_form_view.o_form_view {
+.o_note_form_view {
     .o_form_sheet_bg {
         display: flex;
         flex-direction: column;
@@ -14,12 +14,9 @@
         .o_form_sheet {
             margin: 0;
             border: none;
-            max-width: none;
             flex: 1;
             box-shadow: none;
             padding: 0;
-            display: flex;
-            flex-direction: column;
             .oe_pad {
                 flex: 1;
                 margin-bottom: 0;
@@ -37,7 +34,7 @@
             min-height: 300px;
         }
     }
-    .oe_form_field.oe_memo {
+    .o_field_widget[name="memo"] {
         padding: 0;
         margin: 0;
         min-height: 200px;
