--- a/addons/web/views/report_templates.xml
+++ b/addons/web/views/report_templates.xml
@@ -283,6 +283,9 @@
                 </script>
             </head>
             <body class="container" t-att-data-report-id="report_xml_id" t-att-onload="subst and 'subst()'" style="overflow:hidden">
+                <!--<div style="position: fixed; top: 0; bottom: 0; left: 0; right: 0; color: #503047; font-size: 100px;
+                font-weight: 500px; display: grid; justify-content: center; align-content: center; opacity: 0.3;
+                transform: rotate(-45deg);">DUPLICATED</div>-->
                 <t t-out="body"/>
             </body>
         </html>
