--- a/odoo/addons/base/views/res_partner_views.xml
+++ b/odoo/addons/base/views/res_partner_views.xml
@@ -345,7 +345,8 @@
                                 <group string="Purchase" name="purchase" priority="2">
                                 </group>
                                 <group name="misc" string="Misc">
-                                    <field name="company_registry" attrs="{'invisible': [('parent_id','!=',False)]}"/>
+                                    <field name="company_registry" string="KVK-nummer" help="A" attrs="{'invisible': ['|', ('parent_id','!=',False), ('country_code', '!=', 'NL')]}"/>
+                                    <field name="company_registry" help="B" attrs="{'invisible': ['|', ('parent_id','!=',False), ('country_code', '==', 'NL')]}"/>
                                     <field name="ref" string="Reference"/>
                                     <field name="company_id" groups="base.group_multi_company" options="{'no_create': True}" attrs="{'readonly': [('parent_id', '!=', False)]}" force_save="1"/>
                                     <field name="industry_id" attrs="{'invisible': [('is_company', '=', False)]}" options="{'no_create': True}"/>
