--- a/addons/mail/static/src/scss/variables/primary_variables.scss
+++ b/addons/mail/static/src/scss/variables/primary_variables.scss
@@ -28,5 +28,5 @@ $o-mail-discuss-sidebar-category-item-avatar-left-margin: $o-mail-discuss-sideba
 $o-mail-discuss-sidebar-category-item-avatar-size: 30px !default;
 $o-mail-discuss-sidebar-scrollbar-width: 15px !default;
 
-$o-mail-message-sidebar-width: 50px;
+$o-mail-message-sidebar-width: 48px !default;
 $o-mail-composer-text-input-height: 40px !default;
