--- a/addons/point_of_sale/static/src/css/pos.css
+++ b/addons/point_of_sale/static/src/css/pos.css
@@ -1242,6 +1242,23 @@ td {
     padding-top:15px;
 }
 
+/*  ********* The BlockUI Component (frontend)  ********* */
+.o_blockUI {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1100;
+  
+    background: #000000;
+    opacity: 0.6;
+    height: 100vh;
+    width: 100vw;
+  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
 /*  ********* The Screens  ********* */
 
