[FIX] web: make css rules applying to oe_stat_button less specific
Before this commit, the rules on oe_stat_button only applied if the stat
button was a direct child of the button box.  However, this is a problem
with the way fields are now wrapped in a div, so it is no longer
possible for a field to be styled like a stat button.

With this commit, we simply make the rule less restrictive.

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -269,7 +269,7 @@ $o-form-label-margin-right: 0px;
             border-left-width: $border-width;
         }
 
-        > .btn.oe_stat_button, > .o_dropdown_more {
+        .btn.oe_stat_button, > .o_dropdown_more {
             flex: 0 0 auto;
             width: percentage(1/3); // Adapt the number of visible buttons for each screen width
             @include media-breakpoint-up(md) {
