wip: add watermark pdf

--- a/addons/account/views/report_invoice.xml
+++ b/addons/account/views/report_invoice.xml
@@ -86,19 +86,9 @@
                         <t t-set="display_discount" t-value="any(l.discount for l in o.invoice_line_ids)"/>
 
                         <table class="table table-sm o_main_table" name="invoice_line_table">
-                            <div style="position: fixed;
-                        top: 0;
-                        bottom: 0;
-                        left: 0;
-                        right: 0;
-                        color: #503047;
-                        font-size: 100px;
-                        font-weight: 500px;
-                        display: grid;
-                        justify-content: center;
-                        align-content: center;
-                        opacity: 0.3;
-                        transform: rotate(-40deg);">DUPLICATED</div>
+                            <!--<div style="position: fixed; top: 0; bottom: 0; left: 0; right: 0; color: #503047;
+                            font-size: 100px; font-weight: 500px; display: grid; justify-content: center;
+                            align-content: center; opacity: 0.3; transform: rotate(-40deg);">TODI LE MEME</div>-->
                             <thead>
                                 <tr>
                                     <th name="th_description" class="text-start"><span>Description</span></th>
