[FIX] mrp: workorder match quantity field in kanban view and tree view
MRP Back to basics 7-10
task-2925474
Previously in workorder Kanban view the quantity refer to "qty_production" but it is asked to match the "qty_remaining" in List view

--- a/addons/mrp/views/mrp_workorder_views.xml
+++ b/addons/mrp/views/mrp_workorder_views.xml
@@ -403,7 +403,7 @@
                 <field name="working_state"/>
                 <field name="workcenter_id"/>
                 <field name="product_id"/>
-                <field name="qty_production"/>
+                <field name="qty_remaining"/>
                 <field name="date_planned_start"/>
                 <field name="production_date"/>
                 <field name="product_uom_id" force_save="1"/>
@@ -417,7 +417,7 @@
                                     </h4>
                                     <div class="o_kanban_record_bottom">
                                         <h5 class="o_kanban_bottom_left">
-                                            <span><t t-esc="record.product_id.value"/>, </span> <span><t t-esc="record.qty_production.value"/> <t t-esc="record.product_uom_id.value"/></span>
+                                            <span><t t-esc="record.product_id.value"/>, </span> <span><t t-esc="record.qty_remaining.value"/> <t t-esc="record.product_uom_id.value"/></span>
                                         </h5>
                                     </div>
                                 </div>
