--- a/addons/project/views/project_views.xml
+++ b/addons/project/views/project_views.xml
@@ -1469,7 +1469,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="oe_clear"></div>
+                            <div class="clearfix"></div>
                         </div>
                     </t>
                     </templates>
