[REM] *: drop `oe_clear` class in favor of `clearfix` bootstrap default
Part of the overall v16 SCSS optimization/restyle, task-2704984.

task-2918463

--- a/addons/project/views/project_views.xml
+++ b/addons/project/views/project_views.xml
@@ -1468,7 +1468,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="oe_clear"></div>
+                            <div class="clearfix"></div>
                         </div>
                     </t>
                     </templates>
