--- a/addons/purchase/views/purchase_views.xml
+++ b/addons/purchase/views/purchase_views.xml
@@ -362,7 +362,7 @@
                                     <field name="tax_totals_json" widget="account-tax-totals-field" nolabel="1" colspan="2"/>
                                 </group>
                             </group>
-                            <div class="oe_clear"/>
+                            <div class="clearfix"/>
                         </page>
                         <page string="Other Information" name="purchase_delivery_invoice">
                             <group>
