--- a/addons/sale/views/sale_order_views.xml
+++ b/addons/sale/views/sale_order_views.xml
@@ -574,7 +574,7 @@
                             <group class="oe_subtotal_footer oe_right" colspan="2" name="sale_total">
                                 <field name="tax_totals_json" widget="account-tax-totals-field" nolabel="1" colspan="2"/>
                             </group>
-                            <div class="oe_clear"/>
+                            <div class="clearfix"/>
                         </group>
                     </page>
                     <page string="Other Info" name="other_information">
