[ADD] web: `font-sans-serif` utility class
Part of the overall v16 SCSS optimization/restyle, task-2704984.

task-2918463

--- a/addons/web/static/src/libs/bootstrap/utilities_custom.scss
+++ b/addons/web/static/src/libs/bootstrap/utilities_custom.scss
@@ -103,6 +103,15 @@ $utilities: map-merge(
                 values: $utilities-sizes,
             ),
         ),
+        "font-family":  map-merge(
+            map-get($utilities, "font-family"),
+            (
+                values: map-merge(
+                    map-get(map-get($utilities, "font-family"), "values"),
+                    (sans-serif: var(--#{$variable-prefix}font-sans-serif)),
+                ),
+            ),
+        ),
     ),
 );
 
