[REM] *: drop `o_cursor_default` & `o_cursor_pointer` classes
Drop custom cursor classes in favor of Bootstrap default ones.
Part of the overall v16 SCSS optimization/restyle, task-2704984.

task-2918463

Part-of: odoo/odoo#97051

--- a/addons/web/static/src/libs/bootstrap/utilities_custom.scss
+++ b/addons/web/static/src/libs/bootstrap/utilities_custom.scss
@@ -68,6 +68,17 @@ $utilities: map-merge(
                 responsive: true,
             ),
         ),
+    ),
+);
+
+// Odoo Custom Utility Classes
+$utilities: map-merge(
+    $utilities,
+    (
+        "cursor": (
+            property: cursor,
+            values: default pointer,
+        ),
     )
 );
 
