[REM] *: drop custom `bg-[color]-light` classes
Drop custom `bg-[color]-light` classes in favor of BS's background
color opacity system.
ref: https://getbootstrap.com/docs/5.1/utilities/background/#opacity

Part of the overall v16 SCSS optimization/restyle, task-2704984.

task-2918463

Part-of: odoo/odoo#97051

--- a/addons/web/static/src/libs/bootstrap/utilities_custom.scss
+++ b/addons/web/static/src/libs/bootstrap/utilities_custom.scss
@@ -114,6 +114,11 @@ $utilities: map-merge(
             property: cursor,
             values: default pointer,
         ),
+        "bg-opacity": (
+            css-var: true,
+            class: bg-opacity,
+            values: $utilities-opacity,
+        ),
         "flex-basis": (
             responsive: true,
             property: flex-basis,
