[ADD] web, *: `transition-x` utility classes
Define classes for some default bootstrap transitions + 'none'.
These values are generic enough to fit different circumstances.

Classes added:
- transition-base
- transition-fade
- transition-none

Part of the overall v16 SCSS optimization/restyle, task-2704984.

task-2918463

--- a/addons/web/static/src/libs/bootstrap/utilities_custom.scss
+++ b/addons/web/static/src/libs/bootstrap/utilities_custom.scss
@@ -145,6 +145,14 @@ $utilities: map-merge(
             property: overflow-y,
             values: auto hidden visible scroll,
         ),
+        "transition": (
+            property: transition,
+            values: (
+                none: none,
+                base: $transition-base,
+                fade: $transition-fade,
+            ),
+        ),
         "min-width": (
             class: min-w,
             property: min-width,
