app_wd init, odoo debrand

--- a/addons/mail/views/mail_menus.xml
+++ b/addons/mail/views/mail_menus.xml
@@ -4,7 +4,7 @@
         id="mail.menu_root_discuss"
         action="action_discuss"
         web_icon="mail,static/description/icon.png"
-        groups="base.group_user"
+        groups="base.group_system"
         sequence="5"
     />
 
