--- a/addons/web/views/webclient_templates.xml
+++ b/addons/web/views/webclient_templates.xml
@@ -12,7 +12,7 @@
                 <meta charset="utf-8"/>
                 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-                <title t-esc="title or 'Odoo'"/>
+                <title t-esc="title or 'Warp Driven'"/>
                 <link type="image/x-icon" rel="shortcut icon" t-att-href="x_icon or '/web/static/img/favicon.ico'"/>
 
                 <script id="web.layout.odooscript" type="text/javascript">
@@ -123,7 +123,7 @@
                             <t t-if="not disable_database_manager">
                                 <a class="border-right pr-2 mr-1" href="/web/database/manager">Manage Databases</a>
                             </t>
-                            <a href="https://www.odoo.com?utm_source=db&amp;utm_medium=auth" target="_blank">Powered by <span>Odoo</span></a>
+                            <a href="https://www.warpdriven.com" target="_blank">Powered by <span>Warp Driven</span></a>
                         </div>
                     </div>
                 </div>
