[REF] website: adapt website page fields to OWL
Since updating page properties means updating fields on the 'website.page'
record, a 'page form view' was used to replace the frontend page properties
dialog at [1].

The goal of this commit is to update the fields used for website page
to work with the new OWL form views.

Follows the merge of the "website in backend" task at [1].

[1]: 31cc10b91dc7762e23b4bde9b945be0c4ce3fe3b

This is a temporary cherry-pick from #97343 used to test fixes after OWL
updates (to remove once the PR is merged).

task-2687506

--- a/addons/website/views/website_views.xml
+++ b/addons/website/views/website_views.xml
@@ -136,7 +136,7 @@
                     <notebook>
                         <page string="Name">
                             <group class="mt-4">
-                                <field name="name" string="Page Name" widget="page_name"/>
+                                <field name="name" string="Page Name" widget="page_name" placeholder="e.g. Home Page"/>
                             </group>
                             <group>
                                 <field name="website_id" invisible="1"/>
