[MIG] payment_adyen_paybylink: adjust for 12.0 Backported from ver 13.0 https://github.com/odoo/odoo/commit/a3236517ef6f47174ae3e31b526c326e02da7b10

--- a/addons/payment_adyen_paybylink/views/payment_views.xml
+++ b/addons/payment_adyen_paybylink/views/payment_views.xml
@@ -5,17 +5,17 @@
         <record id="acquirer_form_adyen" model="ir.ui.view">
             <field name="name">acquirer.form.adyen</field>
             <field name="model">payment.acquirer</field>
-            <field name="inherit_id" ref="payment.acquirer_form"/>
+            <field name="inherit_id" ref="payment_adyen.acquirer_form_adyen"/>
             <field name="arch" type="xml">
                 <xpath expr='//field[@name="adyen_merchant_account"]' position='after'>
                     <field name="adyen_api_key"
-                           attrs="{'required':[('provider', '=', 'adyen'), ('state', '!=', 'disabled')]}"
+                           attrs="{'required':[('provider', '=', 'adyen'), ('website_published', '!=', False)]}"
                            password="True"/>
                     <field name="adyen_hmac_key"
-                           attrs="{'required':[('provider', '=', 'adyen'), ('state', '!=', 'disabled')]}"
+                           attrs="{'required':[('provider', '=', 'adyen'), ('website_published', '!=', False)]}"
                            password="True"/>
                     <field name="adyen_checkout_api_url"
-                           attrs="{'required':[('provider', '=', 'adyen'), ('state', '!=', 'disabled')]}"/>
+                           attrs="{'required':[('provider', '=', 'adyen'), ('website_published', '!=', False)]}"/>
                 </xpath>
                 <xpath expr="//field[@name='adyen_skin_code']" position='replace'></xpath>
                 <xpath expr="//field[@name='adyen_skin_hmac_key']" position='replace'></xpath>
