[FIX] website: fix configurator style
When [1] moved the configurator frontend to a backend client action, it
did not correctly adapt the style: the backend's root element has a
font-size of 12px when the frontend has the default one (16px). As a
result, every css property using rem units was inaccurate.
This commit temporarily sets the root element font size to 16px when the
configurator client action is displayed to restore the style it had on
versions 15.X.
It also adapts the style to bootsrap 5.

[1]: https://github.com/odoo/odoo/commit/31cc10b91dc7762e23b4bde9b945be0c4ce3fe3b

task-2687506

--- a/addons/website/static/src/client_actions/configurator/configurator.scss
+++ b/addons/website/static/src/client_actions/configurator/configurator.scss
@@ -1,6 +1,37 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i&display=swap");
+
 .o_configurator_container {
     @include o-position-absolute(0, 0, 0, 0);
     background-color: $white;
+    font-family: "Source Sans Pro", "Roboto", $font-family-sans-serif;
+
+    .container {
+        max-width: map-get($container-max-widths, xl);
+    }
+
+    .small {
+        font-size: 80%;
+    }
+
+    .h4 {
+        font-size: 1.5rem !important;
+    }
+
+    .text-info {
+        color: $o-info !important;
+    }
+
+    .text-warning {
+        color: $o-warning !important;
+    }
+
+    .card {
+        background-color: $white !important;
+
+        .card-body {
+            background-color: rgba($white, 0.9) !important;
+        }
+    }
 
     .o_configurator_screen {
 
