--- a/addons/website/static/src/components/website_loader/website_loader.scss
+++ b/addons/website/static/src/components/website_loader/website_loader.scss
@@ -2,7 +2,7 @@
     font-family: "Montserrat", $font-family-sans-serif;
     background-color: rgba($o-shadow-color, .9);
     pointer-events: all;
-    font-size: 3.5rem;
+    font-size: 42px;
     justify-content: space-evenly;
     z-index: $zindex-modal - 1;
     padding: 7%;
