--- a/addons/account/wizard/account_tour_upload_bill.xml
+++ b/addons/account/wizard/account_tour_upload_bill.xml
@@ -12,7 +12,7 @@
                         <div class="grid">
                             <field name="selection" widget="radio" class="g-col-4"/>
                             <field name="preview_invoice" widget="html" invisible="selection != 'sample'" class="g-col-8"/>
-                            <field name="attachment_ids" widget="many2many_binary" string="Attach a file" invisible="selection != 'upload'" class="g-col-8"/>
+                            <field name="linked_attachment_ids" widget="many2many_binary" string="Attach a file" invisible="selection != 'upload'" class="g-col-8"/>
                         </div>
                     </sheet>
                     <footer>
